--- a/ChinookDemo/WebApp/Site.Master
+++ b/ChinookDemo/WebApp/Site.Master
@@ -112,6 +112,10 @@
                                         href="~/SamplePages/ListViewODSCRUD.aspx"
                                         style="color:black" runat="server">
                                    ODS CRUD using ListView</a>
+                                <a class="dropdown-item"
+                                        href="~/SamplePages/GridViewODS.aspx"
+                                        style="color:black" runat="server">
+                                   ODS using GridView</a>
                             </div>
                          </li>
                          <li class="nav-item">
