--- a/ChinookDemo/WebApp/Site.Master
+++ b/ChinookDemo/WebApp/Site.Master
@@ -116,6 +116,10 @@
                                         href="~/SamplePages/GridViewODS.aspx"
                                         style="color:black" runat="server">
                                    ODS using GridView</a>
+                                <a class="dropdown-item"
+                                        href="~/SamplePages/LinqPad2AppQuery.aspx"
+                                        style="color:black" runat="server">
+                                   Move LinqPad Query to WebApp</a>
                             </div>
                          </li>
                          <li class="nav-item">
